--- a/adaptx/pages/index.html
+++ b/adaptx/pages/index.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
     />
     <link rel="stylesheet" href="../styles/index.css" />
+
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel" src="/components/DyslexiaFeature.jsx"></script>
+
   </head>
 
   <style>
