fixed index location

--- a/adaptx/index.html
+++ b/adaptx/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
     />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
 
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -39,11 +39,11 @@
           <span class="bar"></span>
         </button>
         <div id="navbar-menu">
-          <a href="home.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="features.html">Accessibility Features</a>
-          <a href="guidelines.html">Guidelines</a>
-          <a href="contact.html">Contact Us</a>
+          <a href="pages/home.html">Home</a>
+          <a href="pages/about.html">About Us</a>
+          <a href="pages/features.html">Accessibility Features</a>
+          <a href="pages/guidelines.html">Guidelines</a>
+          <a href="pages/contact.html">Contact Us</a>
         </div>
       </nav>
     </header>
