--- a/adaptx/pages/featurepage.html
+++ b/adaptx/pages/featurepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feature Page - AdaptX</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" />
-    <link rel="stylesheet" href="../styles/home.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/featurepage.css" />
   </head>
   <body>
