--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel" src="/components/DyslexiaFeature.jsx"></script>
+<script type="text/babel" src="te/components/DyslexiaFeature.jsx"></script>
 
   </head>
 
@@ -39,11 +39,11 @@
           <span class="bar"></span>
         </button>
         <div id="navbar-menu">
-          <a href="pages/home.html">Home</a>
-          <a href="pages/about.html">About Us</a>
-          <a href="pages/features.html">Accessibility Features</a>
-          <a href="pages/guidelines.html">Guidelines</a>
-          <a href="pages/contact.html">Contact Us</a>
+          <a href="index.html">Home</a>
+          <a href="te/pages/about.html">About Us</a>
+          <a href="te/pages/features.html">Accessibility Features</a>
+          <a href="te/pages/guidelines.html">Guidelines</a>
+          <a href="te/pages/contact.html">Contact Us</a>
         </div>
       </nav>
     </header>
@@ -133,11 +133,11 @@
             <div class="footer-section links">
               <h2>Quick Links</h2>
               <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="features.html">Accessibility</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="guidelines.html">Guidelines</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="te/pages/about.html">About Us</a></li>
+                <li><a href="te/pages/features.html">Accessibility</a></li>
+                <li><a href="te/pages/contact.html">Contact</a></li>
+                <li><a href="te/pages/guidelines.html">Guidelines</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
             </div>
