--- a/te/pages/features/autism-feature.html
+++ b/te/pages/features/autism-feature.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
     />
-    <link rel="stylesheet" href="../../styles/home.css" />
+    <link rel="stylesheet" href="../../styles/index.css" />
     <link rel="stylesheet" href="../../styles/features/autism-feature.css" />
   </head>
   <body>
