--- a/te/pages/features/dyslexia-feature.html
+++ b/te/pages/features/dyslexia-feature.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700&display=swap"
     />
-    <link rel="stylesheet" href="../../styles/home.css" />
+    <link rel="stylesheet" href="../../styles/index.css" />
     <link rel="stylesheet" href="../../styles/features/dyslexia-feature.css" />
   </head>
   <body>
