--- a/te/pages/about.html
+++ b/te/pages/about.html
@@ -26,7 +26,7 @@
           <span class="bar"></span>
         </button>
         <div id="navbar-menu">
-          <a href="../index.html">Home</a>
+          <a href="../../index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="features.html">Accessibility Features</a>
           <a href="guidelines.html">Guidelines</a>
