--- a/te/pages/featurepage.html
+++ b/te/pages/featurepage.html
@@ -18,7 +18,7 @@
           <span class="bar"></span>
         </button>
         <div id="navbar-menu">
-          <a href="../index.html">Home</a>
+          <a href="../../index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="features.html">Accessibility Features</a>
           <a href="guidelines.html">Guidelines</a>
