--- a/te/pages/guidelines.html
+++ b/te/pages/guidelines.html
@@ -139,7 +139,7 @@ for sy<!DOCTYPE html>
           <span class="bar"></span>
         </button>
         <div id="navbar-menu">
-          <a href="../index.html">Home</a>
+          <a href="../../index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="features.html">Accessibility Features</a>
           <a href="guidelines.html">Guidelines</a>
