--- a/te/pages/features/adhd-feature.html
+++ b/te/pages/features/adhd-feature.html
@@ -27,10 +27,10 @@
         </button>
         <div id="navbar-menu">
           <a href="../../../index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="features.html">Accessibility Features</a>
-          <a href="guidelines.html">Guidelines</a>
-          <a href="contact.html">Contact Us</a>
+          <a href="../about.html">About Us</a>
+          <a href="../features.html">Accessibility Features</a>
+          <a href="../guidelines.html">Guidelines</a>
+          <a href="../contact.html">Contact Us</a>
         </div>
       </nav>
     </header>
@@ -764,6 +764,26 @@ document.addEventListener("DOMContentLoaded", function () {
           closeCodeModal();
         }
       };
+
+      // Mobile menu toggle
+      const navbarToggle = document.querySelector(".navbar-toggle");
+      const navbarMenu = document.getElementById("navbar-menu");
+      navbarToggle.addEventListener("click", function () {
+        navbarMenu.classList.toggle("active");
+        this.setAttribute(
+          "aria-expanded",
+          navbarMenu.classList.contains("active")
+        );
+      });
+      // Active link highlighting
+      const links = navbarMenu.querySelectorAll("a");
+      const current = window.location.pathname.split("/").pop();
+      links.forEach((link) => {
+        if (link.getAttribute("href") === current) {
+          link.classList.add("active");
+          link.setAttribute("aria-current", "page");
+        }
+      });
     </script>
   </body>
 </html>
