--- a/te/pages/contact.html
+++ b/te/pages/contact.html
@@ -6,16 +6,20 @@
     <title>Contact Us - AdaptX</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Space+Grotesk:wght@700&display=swap"
     />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
 
   <body>
     <header>
       <nav id="navbar">
-        <div class="web-name">AdaptX</div>
+        <div class="logo">AdaptX</div>
         <button
           class="navbar-toggle"
           aria-label="Open navigation menu"
@@ -35,24 +39,106 @@
         </div>
       </nav>
     </header>
+    <script>
+      // Mobile menu toggle
+      const navbarToggle = document.querySelector(".navbar-toggle");
+      const navbarMenu = document.getElementById("navbar-menu");
+      navbarToggle.addEventListener("click", function () {
+        navbarMenu.classList.toggle("active");
+        this.setAttribute(
+          "aria-expanded",
+          navbarMenu.classList.contains("active")
+        );
+      });
+      // Active link highlighting
+      const navLinks = navbarMenu.querySelectorAll("a");
+      const currentPath = window.location.pathname.split("/").pop();
+      navLinks.forEach((link) => {
+        const linkHref = link.getAttribute("href").split("/").pop();
+        if (
+          linkHref === currentPath ||
+          (currentPath === "" && linkHref === "index.html")
+        ) {
+          link.classList.add("active");
+          link.setAttribute("aria-current", "page");
+        }
+      });
+    </script>
 
     <main>
-      <div class="contact-form-container">
-        <form>
-          <div class="web-name" style="color: darkblue">CONTACT US</div>
-          <label> Name </label>
-          <input type="text" name="name" placeholder="Your Name" required />
-          <label> Mail </label>
-          <input type="email" name="email" placeholder="Your Email" required />
-          <label> Message </label>
-          <textarea
-            name="message"
-            placeholder="Your Message"
-            rows="5"
-            required
-          ></textarea>
-          <button type="submit">Send Message</button>
-        </form>
+      <h1 class="page-title">GET IN TOUCH</h1>
+
+      <div class="contact-content-wrapper">
+        <div class="contact-info">
+          <h2>Reach Out To Us</h2>
+          <p>
+            Have questions, feedback, or just want to say hello? We're here to
+            help! Fill out the form or use the contact details below.
+          </p>
+          <ul>
+            <li>
+              <i class="fas fa-envelope"></i>
+              <strong>Email:</strong> support@adaptx.com
+            </li>
+            <li>
+              <i class="fas fa-phone-alt"></i>
+              <strong>Phone:</strong> +1 (555) 123-4567
+            </li>
+            <li>
+              <i class="fas fa-map-marker-alt"></i>
+              <strong>Address:</strong> 123 Accessibility Way, Tech City, TX
+              78701
+            </li>
+          </ul>
+
+          <div class="social-links">
+            <h2>Connect with Us</h2>
+            <a href="#" aria-label="Facebook"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="#" aria-label="LinkedIn"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="contact-form-container">
+          <form>
+            <h2>Send Us a Message</h2>
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Your Full Name"
+              required
+            />
+
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="your.email@example.com"
+              required
+            />
+
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              name="message"
+              placeholder="Tell us how we can help..."
+              rows="6"
+              required
+            ></textarea>
+
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
       </div>
     </main>
 
@@ -69,7 +155,7 @@
           <div class="footer-section links">
             <h2>Quick Links</h2>
             <ul>
-              <li><a href="home.html">Home</a></li>
+              <li><a href="../../index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="features.html">Accessibility</a></li>
               <li><a href="contact.html">Contact</a></li>
